src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_1.snap
---
source: src/parser/test.rs
description: "fn( {}"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Err(
            Err(ExpectedTokenNotFound("SyntaxError: Expected ')' not found."), (0,2)->(0,3)),
        ),
        body: Err(
            Err(ExpectedTokenNotFound("SyntaxError: Expected '{' not found."), (0,5)->(0,6)),
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 6,
            },
        },
    },
]

===================================

fn( {}
  ^ [Error] SyntaxError: Expected ')' not found.
     ^ [Error] SyntaxError: Expected '{' not found.
